--- a/app/views/grant_submissions/submissions/index.html.haml
+++ b/app/views/grant_submissions/submissions/index.html.haml
@@ -6,12 +6,14 @@
   %h3
     Submissions
 
-  - unless @submissions.present?
+  - if @submissions.none?
     %p
       There are no submissions to this grant.
   - else
 
-    %table.table.table-condensed
+    != pagy_info(@pagy)
+
+    %table
       %thead
         %tr
           %th Applicant
@@ -32,5 +34,5 @@
               = link_to 'Edit', edit_grant_submission_path(@grant, submission), class: 'button clear'
               = link_to 'Delete', grant_submission_path(@grant, submission), method: :delete, data: { confirm: 'Are you sure?'}, class: 'button clear alert', confirm: 'Are you sure?'
 
-    = pagy_foundation_nav(@pagy).html_safe
+    != pagy_foundation_nav(@pagy)
 
