--- a/app/views/profiles/grants/index.html.haml
+++ b/app/views/profiles/grants/index.html.haml
@@ -1,11 +1,16 @@
 %h3
   My Grants
+
 - if current_user.system_admin? || current_user.grant_creator?
   = link_to 'Create New Grant', new_grant_path, class: 'button primary'
-- unless @grants.present?
+
+- if @grants.none?
   %p
     You currently have no grants.
 -else
+
+  = render partial: 'shared/pagy_header', locals: { pagy: @pagy }
+
   %table
     %thead
       %tr
@@ -26,11 +31,12 @@
       - @grants.each do |grant|
         %tr
           %td= link_to grant.name, grant
-          %td= grant.state
+          %td= grant.state.titleize
           %td= grant.publish_date
           %td= grant.submission_open_date
           %td= grant.submission_close_date
           %td= link_to 'Edit', edit_grant_path(grant) if policy(grant).edit?
-          %td=  link_to 'Delete', grant, method: :delete, data: { confirm: 'Are you sure?' } if policy(grant).destroy? && grant_can_be_deleted?(grant)
+          %td= link_to 'Delete', grant, method: :delete, data: { confirm: 'Are you sure?' } if policy(grant).destroy? && grant_can_be_deleted?(grant)
 
+  != pagy_foundation_nav(@pagy)
 
