--- a/app/views/profiles/reviews/index.html.haml
+++ b/app/views/profiles/reviews/index.html.haml
@@ -1,20 +1,27 @@
 %h3
   My Reviews
 
-%table
-  %thead
-    %tr
-      %th Title
-      %th Applicant
-      %th Grant
-      %th Due Date
+- if @reviews.none?
+  %p
+    You have no reviews.
+- else
 
-  %tbody
-    - @reviews.each do |review|
+  = render partial: 'shared/pagy_header', locals: { pagy: @pagy }
+
+  %table
+    %thead
       %tr
-        %td= link_to truncate(review.submission.title), grant_submission_path(review.grant, review.submission)
-        %td= sortable_full_name(review.submission.applicant)
-        %td= review.grant.name
-        %td= review.grant.review_close_date
+        %th Submission Title
+        %th Applicant
+        %th Grant
+        %th Due Date
 
-%br
+    %tbody
+      - @reviews.each do |review|
+        %tr
+          %td= link_to truncate(review.submission.title), grant_submission_path(review.grant, review.submission)
+          %td= sortable_full_name(review.submission.applicant)
+          %td= review.grant.name
+          %td= review.grant.review_close_date
+
+  != pagy_foundation_nav(@pagy)
