--- a/app/views/profiles/submissions/index.html.haml
+++ b/app/views/profiles/submissions/index.html.haml
@@ -1,21 +1,28 @@
 %h3
   My Submissions
 
-%table.table.table-condensed
-  %thead
-    %tr
-      %th Title
-      %th Grant
-      %th Submitted On
-      %th
-  %tbody
-    - @submissions.each do |submission|
-      %tr
-        %td
-          = link_to submission.title, grant_submission_path(submission.grant, submission)
-        %td
-          = link_to submission.grant.name, grant_path(submission.grant)
-        %td
-          = submission.created_at
+- if @submissions.empty?
+  %p
+    You have no submissions.
+- else
 
-%br
+  = render partial: 'shared/pagy_header', locals: { pagy: @pagy }
+
+  %table
+    %thead
+      %tr
+        %th Title
+        %th Grant
+        %th Submitted On
+        %th
+    %tbody
+      - @submissions.each do |submission|
+        %tr
+          %td
+            = link_to submission.title, grant_submission_path(submission.grant, submission)
+          %td
+            = link_to submission.grant.name, grant_path(submission.grant)
+          %td
+            = submission.created_at
+
+  != pagy_foundation_nav(@pagy)
