--- a/app/views/grants/reviews/index.html.haml
+++ b/app/views/grants/reviews/index.html.haml
@@ -3,7 +3,9 @@
 = render 'shared/grant_edit_tabbed_menu', { grant: @grant }
 
 .tabs-panel.is-active
-  %h2 Reviews
+  %h2
+    Reviews
+
   .grid-x
     .cell
       - if @reviews.empty?
@@ -13,14 +15,22 @@
           %strong
             = link_to 'Add reviewers or assign reviews', grant_reviewers_path(@grant)
       - else
+
+        = render 'shared/pagy_header', locals: { pagy: @pagy }
+
         %table.hover
           %thead
             %tr
-              %th Applicant
-              %th Submission
-              %th Reviewer
-              %th Review
-              %th Overall impact score
+              %th
+                = sort_link(@q, :applicant_last_name, 'Applicant')
+              %th
+                = sort_link(@q, :submission_title, 'Submission')
+              %th
+                = sort_link(@q, :reviewer_last_name, 'Reviewer')
+              %th
+                = sort_link(@q, :overall_impact_score, 'Review')
+              %th
+                = sort_link(@q, :overall_impact_score)
               %th Composite Score
 
           %tbody
@@ -28,7 +38,11 @@
               %tr
                 %td= sortable_full_name(review.submission.applicant)
                 %td= link_to truncate(review.submission.title), grant_submission_path(review.grant, review.submission)
-                %td= full_name(review.reviewer)
-                %td= link_to 'Full Review', grant_submission_review_path(review.grant, review.submission, review)
+                %td
+                  = sortable_full_name(review.reviewer)
+                %td
+                  = review.is_complete? ? link_to('Full Review', grant_submission_review_path(review.grant, review.submission, review)) : 'Incomplete'
                 %td= (review.overall_impact_score || 0)
                 %td= review.composite_score
+
+        != pagy_foundation_nav(@pagy)
