--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -4,7 +4,7 @@
   = yield(:page_title)
 
 = search_form_for @q, url: users_path do |f|
-  .grid-x.grid-padding-x
+  .grid-x.grid-margin-x.medium-margin-collapse
     .small-12.medium-2.cell
       %label.text-left.middle
         Search User or Email
@@ -14,20 +14,24 @@
       = f.submit 'Search', class: 'button'
       = link_to 'Reset', users_path, class: 'button clear secondary'
 
-= render partial: 'shared/pagy_header', locals: { pagy: @pagy }
+- if @users.empty?
+  %p
+    No users were found.
+- else
+  = render partial: 'shared/pagy_header', locals: { pagy: @pagy }
 
-%table
-  %thead
-    %tr
-      %th
-        = sort_link(@q, :last_name, 'Name')
-      %th
-        = sort_link(@q, :email)
-
-  %tbody
-    - @users.each do |user|
+  %table
+    %thead
       %tr
-        %td= link_to sortable_full_name(user), edit_user_path(user)
-        %td= user.email
+        %th
+          = sort_link(@q, :last_name, 'Name')
+        %th
+          = sort_link(@q, :email)
 
-!= pagy_foundation_nav(@pagy)
+    %tbody
+      - @users.each do |user|
+        %tr
+          %td= link_to sortable_full_name(user), edit_user_path(user)
+          %td= user.email
+
+  != pagy_foundation_nav(@pagy)
