--- a/app/views/grant_reviewers/index.html.haml
+++ b/app/views/grant_reviewers/index.html.haml
@@ -23,14 +23,14 @@
       %p
         To remove an assignment, drag the submission from the reviewer's box back to the unassigned submissions box on the right.
       %p
-        Each reviewer may assess up to #{@grant.max_proposals_per_reviewer} #{'submission'.pluralize(@grant.max_proposals_per_reviewer)}.
+        Each reviewer may assess up to #{@grant.max_submissions_per_reviewer} #{'submission'.pluralize(@grant.max_submissions_per_reviewer)}.
     .cell.small-5.small-offset-2
       %h4
         Unassigned Submissions
       %p
         Drag the unassigned submissions below to the box under the desired reviewer on the left.
       %p
-        Each submission may be assessed by up to #{@grant.max_reviewers_per_proposal} reviewers
+        Each submission may be assessed by up to #{@grant.max_reviewers_per_submission} reviewers
   .grid-x
     .cell.small-5#assigned-reviewers
       - if @grant_reviewers.none?
@@ -39,10 +39,12 @@
         = render partial: 'reviewers', locals: { grant: @grant, grant_reviewers: @grant_reviewers }
 
     .gridx.small-5.small-offset-2(data-sticky-container)
-      - if @unassigned_submissions.none?
-        There are no submissions that need to be assigned.
-      - else
-        = render partial: 'unassigned_submissions', locals: { grant: @grant, unassigned_submissions: @unassigned_submissions }
+      #unassigned_submissions.sticky(data-sticky data-top-anchor="assigned-reviewers")
+        .unassigned_submission_list
+          - if @unassigned_submissions.none?
+            There are no submissions that need to be assigned.
+          - else
+            = render partial: 'unassigned_submissions', locals: { grant: @grant, unassigned_submissions: @unassigned_submissions }
 
 :javascript
   $(function() {
