front-end feedback

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -32,13 +32,23 @@ main {
   }
 
   // Edit
-  #grant-state {
-    margin: 2rem 0;
+  #grant-state,
+  #grant-state form {
+    font-size: 1.15em;
+    margin: 1rem 0;
     form.grant-state {
       display: inline-block;
       .button {
         margin: 0;
       }
+    }
+  }
+  #grant-info .tabs-title {
+    &.is-active {
+      background-color: #e6e6e6;
+    }
+    a {
+      font-size: .95em;
     }
   }
 }
@@ -59,9 +69,9 @@ label.required-true:after {
     box-shadow: 0 0 2px #cc4b37;
   }
 }
-.tabs-title.is-active {
-  background-color: #e6e6e6;
-}
+// .tabs-title.is-active {
+//   background-color: #e6e6e6;
+// }
 
 .pagy-header {
   margin: .75em 0em;
