Minor typos, debug, requests

--- a/app/views/grant_creator_request_review_mailer/approved.html.haml
+++ b/app/views/grant_creator_request_review_mailer/approved.html.haml
@@ -2,7 +2,7 @@
   Dear #{full_name(@requester)},
 
 %p
-  You request for Grant Creator rights has been appoved.
+  You request for Grant Creator rights has been approved.
 
 %p
   Visit the
