--- a/app/views/grant_creator_request_review_mailer/approved.txt.erb
+++ b/app/views/grant_creator_request_review_mailer/approved.txt.erb
@@ -1,6 +1,6 @@
 Dear <%= full_name(@requester) %>,
 
-You request for Grant Creator rights has been appoved.
+You request for Grant Creator rights has been approved.
 
 Visit the <%= link_to 'Competitions web site', root_url %> to add a new grant competition.
 
