--- a/app/views/grant_submissions/submissions/index.html.haml
+++ b/app/views/grant_submissions/submissions/index.html.haml
@@ -35,7 +35,6 @@
             %td
               = link_to 'Reviews', grant_submission_reviews_path(@grant, submission), class: 'button clear'
               = link_to 'Edit', edit_grant_submission_path(@grant, submission), class: 'button clear'
-              = link_to 'Delete', grant_submission_path(@grant, submission), method: :delete, data: { confirm: 'Are you sure?'}, class: 'button clear alert', confirm: 'Are you sure?'
+              = link_to 'Delete', grant_submission_path(@grant, submission), method: :delete, data: { confirm: 'Are you sure?'}, class: 'button clear alert', confirm: 'Are you sure?' if !@grant.published?
 
     != pagy_foundation_nav(@pagy)
-
