Update review assignemnt mailer text

--- a/app/views/reviewer_mailer/assignment.html.haml
+++ b/app/views/reviewer_mailer/assignment.html.haml
@@ -8,7 +8,7 @@
   an application to the grant #{link_to @grant.name, grant_url(@grant)} in Competitions.
 
 %p
-  \#TODO: Add link to users reviews page.
+  By clicking the link above you can review or opt out of reviewing this submission.
 
 %p
   Thank you.
