--- a/app/views/reviewer_mailer/assignment.text.erb
+++ b/app/views/reviewer_mailer/assignment.text.erb
@@ -5,6 +5,6 @@ You have been asked to review the submission:
 an application for the grant:
 <%= link_to @grant.name, grant_url(@grant)%> in Competitions.
 
-#TODO: Add link to user's reviews page.
+By clicking the link above you can review or opt out of reviewing this submission.
 
 Thank you.
