--- a/app/views/grants/show.html.haml
+++ b/app/views/grants/show.html.haml
@@ -13,7 +13,7 @@
       RFA
     = @grant.rfa.html_safe
 
-    = link_to 'Apply Now', grant_apply_path(@grant), class: 'button expanded' if @grant.accepting_submissions?
+    = link_to 'Apply Now', grant_apply_path(@grant), class: 'button expanded' if @grant.accepting_submissions? || policy(@grant).grant_viewer_access?
     %hr
 
     %ul.menu.simple#user-links
