--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,3 +20,6 @@
           = render 'layouts/flash'
 
           = yield
+
+      %div.grid-x.grid-margin-x.grid-margin-y
+        = render 'layouts/footer'
