Include application version in footer

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -16,4 +16,5 @@
         <br/>
         (NCATS UL1TR001422 and U24TR002306)
       %p
-        0.0
+        = precede 'v' do
+          = Competitions::Application::VERSION
