Add header help links and footer email address #205

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -16,5 +16,7 @@
         <br/>
         (NCATS UL1TR001422 and U24TR002306)
       %p
+        = mail_to 'competitions-cd2h@northwestern.edu'
+      %p
         = precede 'v' do
           = Competitions::Application::VERSION
