--- a/app/views/devise/menu/_login_items.html.haml
+++ b/app/views/devise/menu/_login_items.html.haml
@@ -1,21 +1,21 @@
 - if user_signed_in?
   - if current_user.system_admin?
-    %li
+    %li#admin
       = link_to 'Admin', '#'
-      %ul#admin.menu
+      %ul.menu
         %li
           = link_to 'Review Access Requests', grant_creator_requests_path
         %li
           = link_to 'All Grants', grants_path
         %li
           = link_to 'All Users', users_path
-  %li
+  %li#logged-in
     = link_to "#{full_name(current_user)}", '#'
-    %ul#logged-in.menu
+    %ul.menu
       %li
         = link_to 'Edit Your Profile', profile_path
       %li
         = link_to 'Log Out', destroy_user_session_path, method: :delete
 - else
-  %li.menu-text.login
+  %li.login
     = link_to 'Login', new_user_session_path
