--- a/app/views/grant_submissions/submissions/new.html.haml
+++ b/app/views/grant_submissions/submissions/new.html.haml
@@ -11,7 +11,7 @@
   .small-12.medium-9.cell#rfa
     %h4
       Apply
-    = @submission.form.description
+    = @submission.form.submission_instructions
     %hr
     = grant_form_for [@grant, @submission], url: grant_submissions_url, html: {multipart: true} do |f|
       = render partial: 'form', locals: { f: f }
