RFA access for unauthenticated users

--- a/app/assets/stylesheets/grants.scss
+++ b/app/assets/stylesheets/grants.scss
@@ -39,6 +39,9 @@ main.grants {
     h1 {
       font-size: 1.5rem;
     }
+    #apply {
+      margin: 1rem 0;
+    }
   }
   #grant-status {
     margin: 1rem 0;
