Clean up grant submission section (#220)
* Remove unused methods, scopes and comments
* Migration to remove :repeatable
* Update related factories
* Update validations, add model-specific error text
* Add system and model specs
* View updates

--- a/app/views/grant_submissions/forms/_section_form.html.erb
+++ b/app/views/grant_submissions/forms/_section_form.html.erb
@@ -1,7 +1,7 @@
 <fieldset class="fieldset form_builder_section_fieldset">
   <legend>
     <span>Section</span>
-    <%= section.link_to_remove 'Delete', { class: 'delete-section button tiny btn-pill alert hollow', title: 'Delete this section and its questions'} if has_edit_permission %>
+    <%= section.link_to_remove 'Delete', { id: "delete-section-#{section.object.id}", class: 'delete-section button tiny btn-pill alert hollow', title: 'Delete this section and its questions'} if has_edit_permission %>
   </legend>
 
   <table class="section_table table unstriped">
