Add admin banner. #164

--- a/app/views/devise/menu/_login_items.html.haml
+++ b/app/views/devise/menu/_login_items.html.haml
@@ -6,6 +6,8 @@
         %li
           = link_to 'Review Access Requests', grant_creator_requests_path
         %li
+          = link_to 'Banners', banners_path
+        %li
           = link_to 'All Grants', grants_path
         %li
           = link_to 'All Users', users_path
