--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,4 @@
+= render 'banners/public_banner' if visible_banners.any?
 .grid-x.align-center-middle
   .small-10.cell#section-intro
     %h4.text-center
