--- a/app/views/grant_submissions/submissions/reviews/index.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/index.html.haml
@@ -4,6 +4,7 @@
 .tabs-panel.is-active
   %h3
     = "Reviews of #{@submission.title}:"
+
   #reviews-overview.grid-container-x
     .grid-x
       .cell.small-12.medium-2
@@ -17,9 +18,9 @@
           Applicant:
       .cell.small-12.medium-10
         = full_name(@submission.applicant)
-    .grid-x
+    .grid-x.grid-padding-y
       .cell.small-12
-        - if @reviews.empty? && params[:q].empty?
+        - if @reviews.empty?
           %p
             There are no reviews for this submission.
             = link_to 'Assign it to a reviewer', grant_reviewers_path(@grant)
@@ -27,11 +28,11 @@
 
           = render 'shared/pagy_header', locals: { pagy: @pagy }
 
-          %table.hover
+          %table.hover.stack
             %thead
               %tr
                 %th
-                  = sort_link(@q, :review_reviwer, 'Reviewer')
+                  = sort_link(@q, :reviewer_last_name, 'Reviewer')
                 %th
                   = sort_link(@q, :overall_impact, 'Review')
                 %th
@@ -41,17 +42,5 @@
                 - @grant.criteria.each do |criterion|
                   %th= criterion.name
             %tbody
-            - @reviews.each do |review|
-              %tr
-                %td
-                  = sortable_full_name(review.reviewer)
-                %td
-                  = review.is_complete? ? link_to('Full Review', grant_submission_review_path(@grant, @submission, review)) : 'Incomplete'
-                %td
-                  = (review.overall_impact_score || 0)
-                %td
-                  = review.composite_score
-                - @grant.criteria.each do |criterion|
-                  %td
-                    - criterion_score = review.criteria_reviews.detect { |cr| cr.criterion_id == criterion.id }
-                    = (criterion_score.nil? || criterion_score.score.nil?)? '-' : criterion_score.score
+              = render @reviews
+
